syntax = "proto3";

import "google/protobuf/empty.proto";
 
package grpc;

message Movie {
	int64 id = 1;
	string title = 2;
	string description = 3;
	double rating = 4;
	string image = 5;
	int64 created_at = 6;
	int64 updated_at = 7;
}

message GetMovieListResponse {
	repeated Movie movies = 1;
}

message Request {
	int64 id = 1;
}

service MoviesService {
    rpc GetMovieList(google.protobuf.Empty) returns (GetMovieListResponse) {};
    rpc GetMovieDetail(Request) returns (Movie) {};
    rpc AddMovie(Movie) returns (google.protobuf.Empty) {};
    rpc UpdateMovie(Movie) returns (google.protobuf.Empty) {};
    rpc DeleteMovie(Request) returns (google.protobuf.Empty) {};
}